# Math_MCPS

./: .gitignore  LICENSE  README.md  cute_message.txt  main.py  manual_commit_test.md  pyproject.toml  test_gpg.txt  test_gpg_sign.txt  test_math_server.py  test_new_key.txt  test_no_gpg.txt  test_push_verification.md
src/open_math_mcps/: __init__.py
